--- a/gradle.properties
+++ b/gradle.properties
@@ -8,9 +8,9 @@ org.gradle.jvmargs=-Xmx1G
 	loader_version=0.12.12
 
 # Mod Properties
-	mod_version = 1.18-1.0.0
+	mod_version = 1.18-1.0.1
 	maven_group = com.just_s
-	archives_base_name = hud-mod
+	archives_base_name = diamond-count
 
 # Dependencies
 	fabric_version=0.44.0+1.18
